# pico-i-am

./: CMakeLists.txt  main.c  test_script.sh  wiznet_iolib.cmake
doc/: pico-i-am.md
src/: CMakeLists.txt  pico_i_am.c  pico_i_am.h
tests/: CMakeLists.txt  minunit.h  pico_i_am_tests.c  runtests.sh
wiznet_iolib_port/: CMakeLists.txt
wiznet_iolib_port/ioLibrary_Driver/inc/: wizchip_spi.h
wiznet_iolib_port/ioLibrary_Driver/src/: wizchip_spi.c
